--- a/TiendaOnline.Infrastructure/TiendaOnline.Infrastructure.csproj
+++ b/TiendaOnline.Infrastructure/TiendaOnline.Infrastructure.csproj
@@ -7,4 +7,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TiendaOnline.Domain\TiendaOnline.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
