--- a/TiendaOnline.API/appsettings.json
+++ b/TiendaOnline.API/appsettings.json
@@ -1,9 +1,14 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
-}
+  {
+    "ConnectionStrings": {
+      "TiendaOnlineDB": "Server=DESKTOP-DHBGUO SQLEXPRESS;Database=TiendaOnlineVolotea;Trusted_Connection=True;TrustServerCertificate=True;"
+    },
+
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "AllowedHosts": "*"
+  }
