implementación funcionalidad  de la api, Creada carpeta DTOs y implentada en Services

--- a/TiendaOnline.API/appsettings.json
+++ b/TiendaOnline.API/appsettings.json
@@ -1,14 +1,12 @@
 {
-  {
-    "ConnectionStrings": {
-      "TiendaOnlineDB": "Server=DESKTOP-DHBGUO SQLEXPRESS;Database=TiendaOnlineVolotea;Trusted_Connection=True;TrustServerCertificate=True;"
-    },
-
-    "Logging": {
-      "LogLevel": {
-        "Default": "Information",
-        "Microsoft.AspNetCore": "Warning"
-      }
-    },
-    "AllowedHosts": "*"
-  }
+  "ConnectionStrings": {
+    "TiendaOnlineDB": "Server=DESKTOP-DHBGUO8\\SQLEXPRESS;Database=TiendaOnlineVolotea;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*"
+}
