--- a/TiendaOnline.API/TiendaOnline.API.csproj
+++ b/TiendaOnline.API/TiendaOnline.API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -17,11 +17,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <ProjectReference Include="..\TiendaOnline.Domain\TiendaOnline.Domain.csproj" />
     <ProjectReference Include="..\TiendaOnline.Infrastructure\TiendaOnline.Infrastructure.csproj" />
+	 <ProjectReference Include="..\TiendaOnline.Application\TiendaOnline.Application.csproj" />
   </ItemGroup>
 
 </Project>
