--- a/TiendaOnline.Testing/TiendaOnline.Testing.csproj
+++ b/TiendaOnline.Testing/TiendaOnline.Testing.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="xunit.v3.extensibility.core" Version="2.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ServicesTest\" />
+  </ItemGroup>
+
 </Project>
